axum-macros/tests/debug_handler/fail/argument_not_extractor.rs
use axum_macros::debug_handler;

#[debug_handler]
async fn handler(foo: bool) {}

fn main() {}
