axum-macros/tests/debug_handler/fail/argument_not_extractor.stderr
error[E0277]: the trait bound `bool: FromRequest<axum::extract::Once, Body>` is not satisfied
 --> tests/debug_handler/fail/argument_not_extractor.rs:4:23
  |
4 | async fn handler(foo: bool) {}
  |                       ^^^^ the trait `FromRequest<axum::extract::Once, Body>` is not implemented for `bool`
  |
  = help: the following other types implement trait `FromRequest<R, B>`:
            <() as FromRequest<R, B>>
            <(T1, T2) as FromRequest<axum::extract::Once, B>>
            <(T1, T2, T3) as FromRequest<axum::extract::Once, B>>
            <(T1, T2, T3, T4) as FromRequest<axum::extract::Once, B>>
            <(T1, T2, T3, T4, T5) as FromRequest<axum::extract::Once, B>>
            <(T1, T2, T3, T4, T5, T6) as FromRequest<axum::extract::Once, B>>
            <(T1, T2, T3, T4, T5, T6, T7) as FromRequest<axum::extract::Once, B>>
            <(T1, T2, T3, T4, T5, T6, T7, T8) as FromRequest<axum::extract::Once, B>>
          and 33 others
  = help: see issue #48214
